<?xml version="1.0" encoding="utf-8"?>

    <!--
    ConstraintsLayout to support multiple screen size
    and center views with each other.
    -->
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/instructionsFragment"
        style="@style/SecondaryTextStyle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:lineHeight="50dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        style="@style/MainTextStyle"
        app:layout_constraintBottom_toTopOf="@+id/instructions_btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4"
        android:text="@string/instructions_text"
        />

    <Button
        android:id="@+id/instructions_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/loginBtnColor"
        android:text="@string/finish"
        style="@style/NextButtonsHeight"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>