<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <!--
    ConstraintsLayout to support multiple screen size
    and center views with each other.
    -->

    <data>
        <variable
            name="shoe"
            type="com.udacity.shoestore.models.Shoe" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingStart="65dp"
        android:paddingTop="28dp"
        android:paddingEnd="65dp"
        tools:context=".ui.home.ShoeDetailFragment">


        <ImageView
            android:id="@+id/imageView"
            android:layout_width="0dp"
            android:layout_height="280dp"
            android:contentDescription="@string/shoeImage"
            android:src="@drawable/shoe"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textview"
            style="@style/MainTextStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:labelFor="@+id/shoeName"
            android:text="@string/name"
            app:layout_constraintBottom_toBottomOf="@+id/shoeName"
            app:layout_constraintStart_toStartOf="parent" />

        <EditText
            android:id="@+id/shoeName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:autofillHints="Name"
            android:ems="12"
            android:importantForAutofill="yes"
            android:inputType="text"
            android:minHeight="48dp"
            android:text="@={shoe.name}"
            app:layout_constraintStart_toEndOf="@+id/textview"
            app:layout_constraintTop_toBottomOf="@+id/imageView"
            tools:ignore="DuplicateSpeakableTextCheck" />

        <TextView
            android:id="@+id/textview1"
            style="@style/MainTextStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:labelFor="@+id/shoeSize"
            android:text="@string/size"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textview" />

        <EditText
            android:id="@+id/shoeSize"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:autofillHints="Size"
            android:text="@={`` + shoe.size}"
            android:ems="12"
            android:importantForAutofill="yes"
            android:inputType="number"
            app:layout_constraintBottom_toBottomOf="@+id/textview1"
            app:layout_constraintStart_toEndOf="@+id/textview1"
            tools:ignore="DuplicateSpeakableTextCheck" />

        <TextView
            android:id="@+id/textview2"
            style="@style/MainTextStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:labelFor="@+id/shoeCompany"
            android:text="@string/company"
            app:layout_constraintBottom_toBottomOf="@+id/shoeCompany"
            app:layout_constraintStart_toStartOf="parent" />

        <EditText
            android:id="@+id/shoeCompany"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:autofillHints="Company"
            android:ems="12"
            android:importantForAutofill="yes"
            android:text="@={shoe.company}"
            android:inputType="text"
            android:minHeight="48dp"
            app:layout_constraintStart_toEndOf="@+id/textview2"
            app:layout_constraintTop_toBottomOf="@+id/shoeSize"
            tools:ignore="DuplicateSpeakableTextCheck" />

        <TextView
            android:id="@+id/textview3"
            style="@style/MainTextStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:labelFor="@+id/showDesc"
            android:text="@string/description"
            app:layout_constraintBottom_toBottomOf="@+id/showDesc"
            app:layout_constraintStart_toStartOf="parent" />

        <EditText
            android:id="@+id/showDesc"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:autofillHints="Description"
            android:ems="12"
            android:importantForAutofill="yes"
            android:inputType="text"
            android:text="@={shoe.description}"
            app:layout_constraintStart_toEndOf="@+id/textview3"
            app:layout_constraintTop_toBottomOf="@+id/shoeCompany"
            tools:ignore="DuplicateSpeakableTextCheck" />

        <Button
            android:id="@+id/cancelBtn"
            style="@style/NextButtonsHeight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:text="@string/cancel"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textview3"
            app:layout_constraintVertical_bias="0.91" />

        <Button
            android:id="@+id/saveBtn"
            style="@style/NextButtonsHeight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="28dp"
            android:text="@string/save"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/showDesc"
            app:layout_constraintVertical_bias="0.905" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>